se modifico el titulo de nuevo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Git ejemplo</title>
 </head>
 <body>
-    <h1> Titulo nuevo </h1>
+    <h1> Titulo nuevo despues de develop </h1>
 </body>
 </html>
