--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1> Titulo nuevo despues de develop </h1>
+
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
+
 </body>
 </html>
