--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1> Titulo nuevo despues de develop </h1>
 
     <form action="#" method="get">
+        <input type="text" name="firstname" id="firstname>
         <input type="button" value="Enviar">
     </form>
 
